# cs4100-ADJFin-Financial-Intelligence

./: .gitignore  PROJECT_ROADMAP.md  README.md  SETUP_WEEK1.md  macro_factors.csv  market_bonds.csv  pyproject.toml  test_env.py  test_integration.py
PRESENTATION/: ADJFIN_Draft_presentation_html.html
agents/: __init__.py  base_agent.py  baseline_agents.py  baseline_human_strats.py  baseline_strategies.py  continuous_dqn_agent.py  discrete_action_wrapper.py  discrete_dqn_agent.py  discrete_ppo_agent.py  dqn_agent.py  ppo_agent.py  q_learning.py  quick_test.py  sac_agent.py  training.py
data/: market_data.py
docs/: agent_architecture.md  algorithm_choice.md
environment/: analyze_market_data.py  finance_env.py  market_data.py  market_real_estate.csv  market_stocks.csv
evaluation/: ablation_study.py  baseline_evaluation.py  behavioral_analysis.py  run_statistical_analysis.py
logs/: all_q_policies.txt  log_dqn  results_20251104_214156.json  results_20251104_214729.json  results_20251105_002012.json
models/: dqn_best_params.json  dqn_finance.pth  dqn_model.pth  dqn_sharpe10.pth  dqn_sharpe20.pth  dqn_sharpe30.pth  dqn_sharpe40.pth  dqn_sharpe50.pth  dqn_sharpe60.pth  dqn_sharpe70.pth  dqn_sharpe80.pth  ppo_best_params.json  ppo_model.pth  q_learning_finance.pkl  sac_model.pth
models_og/: dqn_best_params.json
src/: evaluate_agents.py  plots.py  train_agents.py  tune_hyperparameters.py  tune_optuna.py
tests/: test_agent_integration.py  test_baseline_human_strat.py  test_dqn_setup.py  test_env.py  test_integration.py
utils/: debug_q_value.py  debug_sharpe.py  (+1 more)
(+9 files in other folders)
