[project]
name = "cs4100-adjfin-financial-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "certifi>=2025.10.5",
    "flake8>=7.3.0",
    "gymnasium>=1.2.1",
    "html5lib>=1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "multitasking>=0.0.12",
    "numpy>=2.2.6",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "streamlit>=1.50.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
